--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -33,7 +33,7 @@ ja:
         low: "￥"
         normal: "￥￥"
         high: "￥￥￥"
-        
+
   # データベースに関する日本語化
   activerecord:
     attributes:
@@ -45,7 +45,7 @@ ja:
         user:
           attributes:
             name:
-              too_short: "は2文字以上20文字以下で記入してください。"
+              too_short: "を入力してください。"
 
   # エラーに関する日本語化
   errors:
@@ -76,4 +76,5 @@ ja:
       too_long: は%{count}文字以内で入力してください
       too_short: は%{count}文字以上で入力してください
       wrong_length: は%{count}文字で入力してください
-      not_saved: "エラーが発生したため、保存できませんでした。"
+      not_saved: "保存されませんでした。"
+
